+mobile sidebar fix & scrollbar styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,3 +40,25 @@ html {
     @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white;
   }
 }
+
+::-webkit-scrollbar {
+  width: 9px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(236, 221, 221);
+  border-radius: 10px;
+  margin: 0.5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #5651e5;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-[#5651e5]/80;
+}
